// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile failure GraphQL error 1`] = `
<div>
  <div>
    {"graphQLErrors":[{"message":"FetchUser: GraphQL error"}],"networkError":null,"message":"FetchUser: GraphQL error"}
  </div>
</div>
`;

exports[`UserProfile failure network failure 1`] = `
<div>
  <div>
    {"graphQLErrors":[],"networkError":{},"message":"FetchUser: network error"}
  </div>
</div>
`;

exports[`UserProfile loading 1`] = `
<div>
  <b>
    Loading...
  </b>
</div>
`;

exports[`UserProfile success 1`] = `
<div>
  <h2>
    Buckaroo Banzai
  </h2>
</div>
`;
